@@ -132,3 +132,30 @@ $sample_email =~ s/\n/\015\012/gs;
 
 	ok($dkim->signature, "signature() works");
 }
+
+{ # TEST signing a message with LOTS OF blank lines
+
+	my $dkim = Mail::DKIM::Signer->new(
+			Algorithm => "rsa-sha1",
+			Method => "relaxed",
+			Domain => "example.org",
+			Selector => "test",
+			KeyFile => $keyfile);
+
+	my $sample_email = <<END_OF_SAMPLE;
+From: jason <jason\@example.org>
+Subject: hi there
+Comment: what is a comment
+
+this is a sample message
+END_OF_SAMPLE
+	$sample_email .= ("\n" x 250000);
+	$sample_email =~ s/\n/\015\012/gs;
+
+print STDERR "# putting in a nasty message\n";
+	$dkim->PRINT($sample_email);
+print STDERR "# finished putting in the nasty message\n";
+	$dkim->CLOSE;
+
+	ok($dkim->signature, "signature() works");
+}
